--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -44,5 +44,9 @@ button.accept-policy {
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px;
+  line-height: 1px;
+}
+.body{
+background-color: #90a31400;
+font-family: 'Montserrat', sans-serif;
 }
