--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,36 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="pt-5 bg-image mt-2"   style="background-image: url('https://th.bing.com/th/id/R.95deb54b67f6fdca5094a45bb4dedd20?rik=dJGx2FQTRx5Hdw&pid=ImgRaw&r=0'); background-size: 100% 100%;
+            height: 100vh">
+<div class="row ">
+<h1 class="col-sm-6 display-4">Welcome to Albania</h1>
+<div class="col-sm-3"></div>
+
+
+ <div class="row">
+    <div class="col-sm-6">
+    <p class="white">This site is created as a refering point for all tourists that wants to know and visit beuties of Albania. 
+        Furthermore anyone can share with others one special place that has visited.
+        Each user can like diffrent places after he will be registered...
+        The most liked places will be listed in order.
+        
+    </p>
+    </div>
+    <div class=" col-sm-6">
+    </div>
+ </div>
+ 
+  <div class="row video">
+    <iframe class="col-sm-3" width="100px" height="150px" 
+src="https://www.youtube.com/embed/YUU_MKTET_o" 
+title="ALBANIA: Go Your Own Way" frameborder="0"
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+  gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+  </div>
+</div>
+
+
+ 
 </div>
