--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,7 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 html {
   font-size: 14px;
 }
@@ -14,5 +18,94 @@ html {
 }
 
 body {
+  margin-top: 0px;
   margin-bottom: 60px;
+}
+
+.favorites{
+  
+  background-color: #aeb9cc;
+  border-radius: 10px 0px 0px 10px;
+}
+
+.mountains{
+
+  background-color: #19e87a;
+}
+.beaches{
+
+  background-color: #11f2ea;
+}
+.culture{
+
+  background-color: #e5e819;
+  border-radius: 0px 10px 10px 0px;
+}
+.addNewPlace{
+  color: red;
+}
+
+.nav-container, .flex-container {
+  width: 1080px;
+  margin: 0 auto;
+  display: flex;
+}
+h1{
+  margin-top: 10px;
+  color: rgb(184, 93, 191);
+  text-decoration: blink;
+}
+h3{
+  margin-top: 20px;
+  color: rgb(46, 232, 242);
+  text-decoration: blink;
+}
+.white{
+  color: white;
+  text-decoration-color: red;
+}
+.carousel-item {
+  height: 100vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+/* sliding photos */
+
+
+.myborders{
+  border: 2px solid #11f2ea;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+.down{
+  margin-bottom: 100px;
+}
+.acqua{
+  color: rgb(11, 143, 141);
+}
+.button{
+background-color: #11f2ea;
+border-color: rgb(11, 143, 141);
+margin-bottom: 3px;
+}
+.video{
+  margin-top: 217px;
+  margin-left: 850px;
+}
+.sfond{
+  background-color: #085b69;
+}
+.navcolor{
+  background-color: #a4f98e;
+}
+.gold{
+  color: gold;
+}
+.flagborder{
+  border-radius: 5px;
 }
